# preint_imu

./: .gitignore  CMakeLists.txt  readme.md
include/: eskf.h  gins.h  gnss.h  imu.h  initializer.h  odom.h  processor.h
include/utils/: math.hpp
script/: figure.py
src/: CMakeLists.txt  estimate_eskf.cpp  main_gins.cpp
src/tools/: CMakeLists.txt  eskf.cpp  gins.cpp  gnss.cpp  imu.cpp  initializer.cpp  processor.cpp
src/tools/optimizer/g2o/: CMakeLists.txt  types.cpp  types.h
test/: CMakeLists.txt  test_preint.cpp
